--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --main-color: #168821; 
     --main-bg-color: #374d2a;
     --main-margin: 1rem 0 2rem 0;
-    --main-fontsize: .7rem;
+    --main-fontsize: 1rem;
 }   
 
 * {
@@ -18,7 +18,7 @@
 
 
 main {
-    border: 1rem solid var(--main-color);
+    border: .6rem solid var(--main-color);
     border-radius: 2rem;
     max-width: 60%;
     min-height: 100vh;
@@ -30,17 +30,24 @@ main {
     -o-border-radius: 2rem;
 }
 
+main h1:nth-of-type(1) {
+    margin: 0 0 1.5rem 0;
+}
+
 h1, p {
     text-align: center;
     letter-spacing: .2rem;
-}
-
-p {
     margin: 2rem 0 0 0;
 }
 
+h2 {
+    font-size: var(--main-fontsize);
+    text-align: center;
+}
+
+
 #roundsBox , #counterPoints {
-    border: .3rem solid var(--main-color);
+    border: .7rem solid var(--main-color);
     border-radius: 1rem;
     margin: var(--main-margin);
     -webkit-border-radius: 1rem;
@@ -59,14 +66,15 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 1rem;
 }
 
 div label:nth-of-type(1) {
-    margin: 0 2rem 0 0;
+    margin: 0 1rem 0 0;
 }
 
 form div:nth-of-type(2) {
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
 }
 
 #roundsBox, h2 {
@@ -74,12 +82,7 @@ form div:nth-of-type(2) {
 }
 
 div, #counterPoints {
-    padding: 3%;
-}
-
-h2 {
-    font-size: var(--main-fontsize);
-    text-align: center;
+    padding: 1.5% 0 1.5% 0;
 }
 
 label {
@@ -93,19 +96,14 @@ label {
 
 #counterPoints {
     display: flex;
+    justify-content: space-around;
     width: 40%;
     margin: 0 auto;
-    justify-content: space-between;
 }
 
-#counterPoints h1:nth-of-type(1) {
-    color: black;
-}
-
-#counterPoints h1:nth-of-type(2) , #counterPoints h1:nth-of-type(2) span{
-    display: inline-block;
-    text-decoration: dashed;
-} 
+/* #result {
+    font-size: .8rem;
+} */
 
 #icons {
     display: flex;
@@ -118,11 +116,29 @@ label {
 }
 
 #goodbye {
-    margin: 2rem 0 0 0;
+    display: flex;
+    flex-direction: column;
+    margin: 4rem 0 0 0;
 }
 
-#goodbye p {
-    margin: .5rem 0 0 0;
-    text-align: center;
-    
+button {
+    padding: 2.5%;
+    margin: 2rem 0 0 0;
+    border: none;
+    border-radius: .5rem;
+    background: var(--main-color);
+    color: var(--main-bg-color);
+    width: 20%;
+    -webkit-border-radius: .5rem;
+    -moz-border-radius: .5rem;
+    -ms-border-radius: .5rem;
+    -o-border-radius: .5rem;
+    align-self: center;
+}
+
+button:focus {
+    outline: none;
+}
+button:hover {
+    opacity: .8;
 }
