--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,6 @@
     --tertiary-color: #ffeb7c;
     --main-color: #194988; 
     --main-bg-color: ##fffffe;
-    --main-margin: 1rem 0 1rem 0;
-    --main-fontsize: 1rem;
 }   
 
 * {
@@ -39,7 +37,7 @@ h1, p {
 }
 
 h2 {
-    font-size: var(--main-fontsize);
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -55,6 +53,10 @@ form {
     border-radius: 1rem;
 }
 
+label {
+    font-size: 1rem;
+}
+
 div label:nth-of-type(1) {
     margin: 0 1rem 0 0;
 }
@@ -64,15 +66,11 @@ form div:nth-of-type(2) {
 }
 
 #roundsBox, h2 {
-    margin: var(--main-margin);
+    margin: 1rem 0 1rem 0;
 }
 
 div, #counterPoints {
     padding: 1.5% 0 1.5% 0;
-}
-
-label {
-    font-size: var(--main-fontsize);
 }
 
 #roundCounter {
@@ -98,21 +96,14 @@ label {
     justify-content: space-evenly;
     margin: 2rem 0 2rem 0;
 }
+/* border-radius ist hier wichtig, weil der JS win/lose/draw Effekt sonst die Ecken sichtbar macht */
+#icons img {
+    border-radius: 1rem;
+}
 
 #icons img:hover {
     transform: scale(1.1,1.1);
-    
 }
-
-/* #icons img:active {
-    filter: drop-shadow(0px 0px 10px var(--button-color));
-} */
-
-#icons img {
-    border-radius: 1rem;
-    transition: box-shadow 1s ease;
-}
-
 
 #goodbye {
     display: flex;
@@ -140,6 +131,8 @@ button:hover {
     background: var(--tertiary-color);
 }
 
+
+/* diese Styles werden durch JavaScript getriggered */
 .win {
     box-shadow: 0px 0px 31px 0px var(--button-color);
 }
