--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
 :root {
     --button-color: #00ebc7;
     --secondary-color: #ff5470;
     --tertiary-color: #ffeb7c;
-    --main-color: #194988; 
+    --main-color: #194988;
     --main-bg-color: ##fffffe;
-}   
+}
 
 * {
     margin: 0;
@@ -18,47 +17,47 @@
 
 body {
     background: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 main {
-    /* border: .6rem solid #fff; */
     border-radius: 2rem;
-    max-width: 80%;
-    margin: 3% auto;
+    min-width: 80%;
     padding: 2%;
+    align-self: center;
     background: linear-gradient(145deg, #17427a, #1b4e92);
-    box-shadow:  10px 10px 30px #153e74, 
-             -10px -10px 30px #1d549c;
-}
-
-main h1:nth-of-type(1) {
-    margin: 0 0 1.5rem 0;
+    box-shadow: 10px 10px 30px #153e74, -10px -10px 30px #1d549c;
 }
 
 h1 {
     font-size: 1.5rem;
-}
-
-h1, p {
     text-align: center;
     letter-spacing: .2rem;
-    margin: 2rem 0 0 0;
     color: var(--button-color);
-}
-
-p {
-    font-size: .8rem;
-    color: #fff;
 }
 
 h2 {
     font-size: 1rem;
     text-align: center;
+    margin: 2rem 0;
+}
+
+p {
+    text-align: center;
+    letter-spacing: .2rem;
+    font-size: .8rem;
+    color: #fff;
+    margin: 1rem 0 0 0;
+    padding: 1% 0;
 }
 
 #roundsBox {
     display: flex;
     flex-direction: column;
+    margin: 1rem 0 1rem 0;
 }
 
 form {
@@ -68,42 +67,27 @@ form {
     border-radius: 1rem;
 }
 
-label {
-    font-size: 1rem;
+#roundChoice div {
+    padding: 1% 0;
 }
 
-div label:nth-of-type(1) {
+#roundChoice div:nth-of-type(1) label:nth-of-type(1), #roundChoice div:nth-of-type(2) label:nth-of-type(1) {
     margin: 0 1rem 0 0;
-}
-
-form div:nth-of-type(2) {
-    /* margin: 0 0 1rem 0; */
-}
-
-#roundsBox, h2 {
-    margin: 1rem 0 1rem 0;
-}
-
-div, #counterPoints {
-    padding: 1.5% 0 1.5% 0;
-}
-
-#roundCounter {
-    margin: 0 0 2rem 0;
-    display: none;
 }
 
 #counterPoints {
     display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    margin: 1% auto;
-    border: .4rem solid #fff;
-    border-radius: 1rem;
+    justify-content: space-around;
+    width: 80%;
+    margin: 0 auto;
+    background: linear-gradient(145deg, #17427a, #1b4e92);
+    box-shadow: inset 5px 5px 15px #153e74, inset -5px -5px 15px #1d549c;
+    border-radius: 2rem;
+    padding: 3% 0;
 }
 
-#move {
-    margin: 3rem 0 2.5rem 0;
+#counterPoints div h1:nth-of-type(1) {
+    margin: 0 0 1rem 0;
 }
 
 #icons {
@@ -111,12 +95,13 @@ div, #counterPoints {
     justify-content: center;
 }
 
-/* border-radius ist hier wichtig, weil der JS win/lose/draw Effekt sonst die Ecken sichtbar macht */
+/* border-radius ist hier wichtig, weil der JS win/lose/draw Effekt sonst die Ecken sichtbar macht, wieso auch immer :( */
+
 #icons img {
     max-width: 7rem;
     border-radius: .8rem;
-    transition: box-shadow, opacity .5s ease;
-    margin: 0 3rem;
+    transition: box-shadow .5s ease;
+    margin: 0 2rem;
     cursor: pointer;
 }
 
@@ -127,7 +112,7 @@ div, #counterPoints {
 }
 
 button {
-    padding: 1.5% 5%;
+    padding: 1.5% 4%;
     border: none;
     border-radius: .5rem;
     background: var(--button-color);
@@ -141,42 +126,40 @@ button:focus {
 }
 
 button:hover {
-    background: var(--tertiary-color);
+    background: #fff;
 }
 
-/* Cutom Radio Buttons */
-[type="radio"]:checked,
-[type="radio"]:not(:checked) {
+/* Custom Radio Buttons */
+
+[type="radio"]:checked, [type="radio"]:not(:checked) {
     position: absolute;
     left: -9999px;
 }
-[type="radio"]:checked + label,
-[type="radio"]:not(:checked) + label
-{
-    position: relative;
-    padding-left: 28px;
-    cursor: pointer;
-    line-height: 20px;
-    display: inline-block;
 
+[type="radio"]:checked+label, [type="radio"]:not(:checked)+label {
+    position: relative;
+    padding-left: 1.75rem;
+    cursor: pointer;
+    line-height: 1.25rem;
+    display: inline-block;
 }
-[type="radio"]:checked + label:before,
-[type="radio"]:not(:checked) + label:before {
+
+[type="radio"]:checked+label:before, [type="radio"]:not(:checked)+label:before {
     content: '';
     position: absolute;
     left: 0;
     top: 0;
-    width: 18px;
-    height: 18px;
+    width: 1.125rem;
+    height: 1.125rem;
     border: 1px solid #fff;
     border-radius: 100%;
     background: #fff;
 }
-[type="radio"]:checked + label:after,
-[type="radio"]:not(:checked) + label:after {
+
+[type="radio"]:checked+label:after, [type="radio"]:not(:checked)+label:after {
     content: '';
-    width: 12px;
-    height: 12px;
+    width: .75rem;
+    height: .75rem;
     background: var(--main-color);
     position: absolute;
     top: 4px;
@@ -184,18 +167,21 @@ button:hover {
     border-radius: 100%;
     transition: all 0.2s ease;
 }
-[type="radio"]:not(:checked) + label:after {
+
+[type="radio"]:not(:checked)+label:after {
     opacity: 0;
     transform: scale(0);
 }
-[type="radio"]:checked + label:after {
+
+[type="radio"]:checked+label:after {
     opacity: 1;
     transform: scale(1);
 }
 
-
 /* diese Styles werden durch JavaScript getriggered */
+
 /* diese werden den Icons zugewiesen */
+
 .win {
     box-shadow: 0px 0px 31px 0px var(--button-color);
 }
@@ -209,6 +195,7 @@ button:hover {
 }
 
 /* diese werden den dem Text zugewiesen */
+
 .resultWin {
     color: var(--button-color);
 }
@@ -221,4 +208,109 @@ button:hover {
     color: var(--tertiary-color);
 }
 
+@media only screen and (max-width: 1024px) {
+    h1, h2 {
+        font-size: .9rem;
+    }
+}
 
+@media only screen and (max-width: 768px) {
+    button {
+        font-size: .6rem;
+    }
+    [type="radio"]:checked+label:before, [type="radio"]:not(:checked)+label:before {
+        width: .75rem;
+        height: .75rem;
+    }
+    [type="radio"]:checked+label:after, [type="radio"]:not(:checked)+label:after {
+        width: .5rem;
+        height: .5rem;
+        top: 3.5px;
+        left: 3.5px;
+    }
+    #icons img {
+        max-width: 5rem;
+        border-radius: .6rem;
+    }
+    p {
+        font-size: .6rem;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    main {
+        border-radius: 1rem;
+        margin: 1rem;
+        background: linear-gradient(145deg, #17427a, #1b4e92);
+    box-shadow: 5px 5px 15px #153e74, -5px -5px 15px #1d549c;
+    }
+
+    h1, h2 {
+        font-size: .6rem;
+    }
+
+    h1 {
+        line-height: 1rem;
+    }
+
+    h2 {
+        margin: 1rem 0 1rem 0;
+        line-height: 1rem
+    }
+
+    #roundsBox {
+        margin: 0 0 1rem 0;
+    }
+
+    #counterPoints {
+        padding: 1rem 1rem;
+    }
+    #counterPoints div h1:nth-of-type(1) {
+        margin: 0 0 0 0;
+    }
+    #icons img {
+        max-width: 3.5rem;
+        border-radius: .3rem;
+        margin: 0 1rem;
+    }
+    p {
+        font-size: .5rem;
+        line-height: .7rem;
+        padding: 0 .2rem;
+    }
+    button {
+        padding: 4%;
+        margin: 0 0 1rem 0;
+    }
+    #counterPoints {
+        border-radius: 1rem;
+    }
+
+    label {
+        font-size: .8rem;
+    }
+
+    [type="radio"]:checked+label:before, [type="radio"]:not(:checked)+label:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: .75rem;
+        height: .75rem;
+        border: 1px solid #fff;
+        border-radius: 100%;
+        background: #fff;
+    }
+    
+    [type="radio"]:checked+label:after, [type="radio"]:not(:checked)+label:after {
+        content: '';
+        width: .5rem;
+        height: .5rem;
+        background: var(--main-color);
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        border-radius: 100%;
+        transition: all 0.2s ease;
+    }
+}
